Adcionando botões de opções (Add tarefa e logout)

--- a/dashboard.html
+++ b/dashboard.html
@@ -91,16 +91,31 @@
                      </div>
               
       </main>
-    <footer class="fixed-bottom text-white op-8">
-        <div class="link-git">
-            <a href="https://github.com/manoribeiro" class=" h4" target="_blank">
-                <div> 
-                    <img src="img/icons/icongitblack.jpg" class="icon-git icon-github-black" alt="">
-                    <h4 class="mt-2 ml-2 float-left" id="github">@manoribeiro</h4>
-                </div>
-            </a>
+      <footer class='fixed-bottom text-white op-8'>
+        <div class='link-git '>
+          <a href='https://github.com/manoribeiro' class='h4 text-white' target='_blank'>
+            <div>
+              <img class='icon-git icon-github-black' src='img/icons/gitWhite.png' alt='Gitgub icone'/>
+              <h4 class="mt-2 ml-2 float-left" id="github" >@manoribeiro</h4>
+            </div>
+          </a>
         </div>
-    </footer>
+        <div class="btn-logout">
+          <a href='index.html'>
+            <div>
+              <img src="img/icons/logout.png" class='icon icon-settings' alt='Logout' />
+            </div>
+          </a>
+        </div>
+        <div class="btn-add">
+          <a href="index.html">
+            <div>
+                <img src="img/icons/add.png" class="icon icon-settings" alt="Adicionar tarefa" />
+                
+            </div>
+          </a>
+        </div>
+      </footer>
 	<script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="js/dragula.js"></script>
