Alterando animação de entrada do box de login

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</style>
 </head>
 <body>
-	<div class="container-login animated bounceInLeft  ">
+	<div class="container-login animated bounceIn">
 		<div class="box shadow-lg  mb-5 rounded card">
 				<div class="card-header h3 text-center">Entre em sua conta</div>
 				<img src="img/logo.png" class="logo-tasks" alt="">
